--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,20 +14,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - run: git fetch --force --tags
       - name: Setup go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '1.22.0'
           cache: true
       - name: Release
-        uses: goreleaser/goreleaser-action@v4
+        uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: latest
+          # version: latest
+          version: '~> v2'
           args: release --rm-dist
         env:
           # Custom secret here since we need to access to robinmin/homebrew-tap and robinmin/scoop-bucket repo.
