--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,13 +23,13 @@ jobs:
         with:
           go-version: '1.22.0'
           cache: true
-      - name: Release
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
           # version: latest
           version: '~> v2'
-          args: release --rm-dist
+          args: release --clean
         env:
           # Custom secret here since we need to access to robinmin/homebrew-tap and robinmin/scoop-bucket repo.
           GITHUB_TOKEN: ${{ secrets.PBLSH_TOKEN }}
