feat: add new prompt template prompts/prompt_generate_unittest_golang.yaml

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "gopls": {
-    "build.allowModfileModifications": true
-    }
+    // "build.allowModfileModifications": true
+    },
+    "go.toolsManagement.checkForUpdates":"off"
 }
