fix: add unit test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "gopls": {
     // "build.allowModfileModifications": true
+        "build.directoryFilters": []
     },
     "go.toolsManagement.checkForUpdates":"off"
 }
