--- a/prompts/prompt_yaml_golang_struct.yaml
+++ b/prompts/prompt_yaml_golang_struct.yaml
@@ -2,6 +2,8 @@ id: prompt_yaml_golang_struct
 name: "Prompt To Generate Golang Struct Definition for YAML"
 description: "A tiny tool to generate golang struct definition based on YAML file content."
 author: "Robin Min"
+default_engine: "chatgpt"
+default_model: "gpt-4o"
 variables:
   - name: "yaml_file"
     vtype: "file"
